crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__typing-only-standard-library-import_TCH003.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
./resources/test/fixtures/flake8_type_checking/TCH003.py:8:12: TCH003 Move standard library import `os` into a type-checking block
   |
 8 | def f():
 9 |     import os
   |            ^^ TCH003
10 | 
11 |     x: os
   |


