crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__typing-only-standard-library-import_runtime_evaluated_base_classes_3.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
./resources/test/fixtures/flake8_type_checking/runtime_evaluated_base_classes_3.py:5:18: TCH003 Move standard library import `uuid.UUID` into a type-checking block
  |
5 | import datetime
6 | import pathlib
7 | from uuid import UUID  # TCH003
  |                  ^^^^ TCH003
8 | 
9 | import pydantic
  |


