crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__typing-only-standard-library-import_runtime_evaluated_decorators_3.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- kind:
    TypingOnlyStandardLibraryImport:
      full_name: uuid.UUID
  location:
    row: 6
    column: 17
  end_location:
    row: 6
    column: 21
  fix: ~
  parent: ~

