crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__typing-only-third-party-import_runtime_evaluated_decorators_2.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
./resources/test/fixtures/flake8_type_checking/runtime_evaluated_decorators_2.py:10:8: TCH002 Move third-party import `numpy` into a type-checking block
   |
10 | from attrs import frozen
11 | 
12 | import numpy  # TCH002
   |        ^^^^^ TCH002
   |


