crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__typing_import_after_usage.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
<filename>:4:8: TCH002 Move third-party import `pandas` into a type-checking block
  |
4 | from __future__ import annotations
5 | 
6 | import pandas as pd
  |        ^^^^^^^^^^^^ TCH002
7 | 
8 | def f(x: pd.DataFrame):
  |
  = help: Move into type-checking block


