crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__unquoted-annotation_TCH200_0.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
TCH200_0.py:8:12: TCH200 [*] Typing-only variable referenced in runtime annotation: `Class`
  |
8 | def f(var: Class) -> Class:
  |            ^^^^^ TCH200
9 |     x: Class
  |
  = help: Add quotes

ℹ Fix
5 5 |     from module import Class
6 6 | 
7 7 | 
8   |-def f(var: Class) -> Class:
  8 |+def f(var: "Class") -> Class:
9 9 |     x: Class
10 10 | 
11 11 | 

TCH200_0.py:8:22: TCH200 [*] Typing-only variable referenced in runtime annotation: `Class`
  |
8 | def f(var: Class) -> Class:
  |                      ^^^^^ TCH200
9 |     x: Class
  |
  = help: Add quotes

ℹ Fix
5 5 |     from module import Class
6 6 | 
7 7 | 
8   |-def f(var: Class) -> Class:
  8 |+def f(var: Class) -> "Class":
9 9 |     x: Class
10 10 | 
11 11 | 

TCH200_0.py:12:12: TCH200 [*] Typing-only variable referenced in runtime annotation: `module.Class`
   |
12 | def f(var: module.Class) -> module.Class:
   |            ^^^^^^^^^^^^ TCH200
13 |     x: module.Class
   |
   = help: Add quotes

ℹ Fix
9  9  |     x: Class
10 10 | 
11 11 | 
12    |-def f(var: module.Class) -> module.Class:
   12 |+def f(var: "module.Class") -> module.Class:
13 13 |     x: module.Class
14 14 | 
15 15 | 

TCH200_0.py:12:29: TCH200 [*] Typing-only variable referenced in runtime annotation: `module.Class`
   |
12 | def f(var: module.Class) -> module.Class:
   |                             ^^^^^^^^^^^^ TCH200
13 |     x: module.Class
   |
   = help: Add quotes

ℹ Fix
9  9  |     x: Class
10 10 | 
11 11 | 
12    |-def f(var: module.Class) -> module.Class:
   12 |+def f(var: module.Class) -> "module.Class":
13 13 |     x: module.Class
14 14 | 
15 15 | 

TCH200_0.py:17:11: TCH200 Typing-only variable referenced in runtime annotation: `Class`
   |
16 | def f():
17 |     print(Class)
   |           ^^^^^ TCH200
   |
   = help: Add quotes

TCH200_0.py:21:11: TCH200 Typing-only variable referenced in runtime annotation: `module.Class`
   |
20 | def f():
21 |     print(module.Class)
   |           ^^^^^^^^^^^^ TCH200
   |
   = help: Add quotes


